--- a/UI/form1.ui
+++ b/UI/form1.ui
@@ -6,47 +6,74 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>489</width>
-    <height>100</height>
+    <width>349</width>
+    <height>102</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Đang tải</string>
   </property>
-  <widget class="QTextBrowser" name="lbl_link">
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(210, 200, 200);</string>
+  </property>
+  <widget class="QProgressBar" name="progressBar">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>30</y>
-     <width>256</width>
-     <height>31</height>
+     <y>40</y>
+     <width>301</width>
+     <height>23</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">QProgressBar{
+	background-color:rgb(210, 200, 200);
+	border-style: none;
+	border-radius: 10px;
+	text-align: center;
+	color: rgb(0, 0, 0)
+}
+QProgressBar::chunk{
+	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(202, 168, 107, 255), stop:1 rgba(255, 255, 255, 255));
+
+	border-radius: 10px;
+}</string>
+   </property>
+   <property name="value">
+    <number>24</number>
+   </property>
   </widget>
-  <widget class="QPushButton" name="btn_submit">
+  <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>380</x>
-     <y>30</y>
-     <width>75</width>
-     <height>31</height>
+     <x>20</x>
+     <y>10</y>
+     <width>121</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Đang tải dữ liệu</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>70</y>
+     <width>151</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Submit</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btn_select_file">
-   <property name="geometry">
-    <rect>
-     <x>290</x>
-     <y>30</y>
-     <width>75</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Select File</string>
+    <string>TextLabel</string>
    </property>
   </widget>
  </widget>
